
src = [
  'src/abstract_actor.cpp',
  'src/abstract_channel.cpp',
  'src/abstract_composable_behavior.cpp',
  'src/abstract_coordinator.cpp',
  'src/abstract_group.cpp',
  'src/actor_addr.cpp',
  'src/actor_companion.cpp',
  'src/actor_config.cpp',
  'src/actor_control_block.cpp',
  'src/actor.cpp',
  'src/actor_ostream.cpp',
  'src/actor_pool.cpp',
  'src/actor_proxy.cpp',
  'src/actor_registry.cpp',
  'src/actor_system_config.cpp',
  'src/actor_system.cpp',
  'src/atom.cpp',
  'src/attachable.cpp',
  'src/behavior.cpp',
  'src/behavior_impl.cpp',
  'src/behavior_stack.cpp',
  'src/blocking_actor.cpp',
  'src/blocking_behavior.cpp',
  'src/concatenated_tuple.cpp',
  'src/config_option.cpp',
  'src/decorated_tuple.cpp',
  'src/default_attachable.cpp',
  'src/deserializer.cpp',
  'src/duration.cpp',
  'src/dynamic_message_data.cpp',
  'src/error.cpp',
  'src/event_based_actor.cpp',
  'src/execution_unit.cpp',
  'src/exit_reason.cpp',
  'src/forwarding_actor_proxy.cpp',
  'src/get_mac_addresses.cpp',
  'src/get_process_id.cpp',
  'src/get_root_uuid.cpp',
  'src/group.cpp',
  'src/group_manager.cpp',
  'src/group_module.cpp',
  'src/inbound_path.cpp',
  'src/invalid_stream_gatherer.cpp',
  'src/invalid_stream_scatterer.cpp',
  'src/invoke_result_visitor.cpp',
  'src/local_actor.cpp',
  'src/logger.cpp',
  'src/mailbox_element.cpp',
  'src/match_case.cpp',
  'src/memory_managed.cpp',
  'src/merged_tuple.cpp',
  'src/message_builder.cpp',
  'src/message.cpp',
  'src/message_data.cpp',
  'src/message_handler.cpp',
  'src/message_view.cpp',
  'src/monitorable_actor.cpp',
  'src/node_id.cpp',
  'src/outbound_path.cpp',
  'src/parse_ini.cpp',
  'src/pretty_type_name.cpp',
  'src/private_thread.cpp',
  'src/proxy_registry.cpp',
  'src/pull5_gatherer.cpp',
  'src/random_gatherer.cpp',
  'src/raw_event_based_actor.cpp',
  'src/ref_counted.cpp',
  'src/replies_to.cpp',
  'src/response_promise.cpp',
  'src/resumable.cpp',
  'src/ripemd_160.cpp',
  'src/scheduled_actor.cpp',
  'src/scoped_actor.cpp',
  'src/scoped_execution_unit.cpp',
  'src/sec.cpp',
  'src/sequencer.cpp',
  'src/serializer.cpp',
  'src/shared_spinlock.cpp',
  'src/skip.cpp',
  'src/splitter.cpp',
  'src/stream_aborter.cpp',
  'src/stream.cpp',
  'src/stream_gatherer.cpp',
  'src/stream_gatherer_impl.cpp',
  'src/stream_id.cpp',
  'src/stream_manager.cpp',
  'src/stream_msg_visitor.cpp',
  'src/stream_priority.cpp',
  'src/stream_scatterer.cpp',
  'src/stream_scatterer_impl.cpp',
  'src/stringification_inspector.cpp',
  'src/sync_request_bouncer.cpp',
  'src/term.cpp',
  'src/terminal_stream_scatterer.cpp',
  'src/test_coordinator.cpp',
  'src/timestamp.cpp',
  'src/try_match.cpp',
  'src/type_erased_tuple.cpp',
  'src/type_erased_value.cpp',
  'src/uniform_type_info_map.cpp',
  'src/unprofiled.cpp',
  'src/work_sharing.cpp',
  'src/work_stealing.cpp',
]

subdir('caf/detail')

inc = include_directories('.')

libcaf_core_lib = static_library('caf_core',
  name_prefix : 'lib',
  sources : src,
  include_directories : inc,
  cpp_args : cflags,
  dependencies : shared_deps,
  pic: true
)

libcaf_core_dep = declare_dependency(
  link_with : libcaf_core_lib,
  dependencies : shared_deps,
  include_directories : inc,
  compile_args : cflags,
  version : '0.15.5',
)
